# ChangeLog for dev-util/strace
# Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-util/strace/ChangeLog,v 1.132 2009/05/30 00:17:44 vapier Exp $

  30 May 2009; Mike Frysinger <vapier@gentoo.org> strace-4.5.18.ebuild,
  +files/strace-4.5.18-arm-cache.patch:
  Fix build failure on arm due to missing cachectl.h #266014 by Pinky.

  14 Feb 2009; Mike Frysinger <vapier@gentoo.org>
  +files/strace-4.5.18-arm-syscalls.patch, strace-4.5.18.ebuild:
  Add changes from upstream for ARM #241168 #258987.

  22 Jan 2009; Jeroen Roovers <jer@gentoo.org> strace-4.5.18.ebuild:
  Reverting to ~hppa (bug #250631, reopening bug #241168).

  11 Nov 2008; Raúl Porcel <armin76@gentoo.org> strace-4.5.18.ebuild:
  Revert, since it seems to fail

  10 Nov 2008; Raúl Porcel <armin76@gentoo.org> strace-4.5.18.ebuild:
  arm/sh stable

  14 Oct 2008; Brent Baude <ranger@gentoo.org> strace-4.5.18.ebuild:
  stable ppc64, bug 241168

  13 Oct 2008; Raúl Porcel <armin76@gentoo.org> strace-4.5.18.ebuild:
  alpha/ia64/x86 stable wrt #241168

  12 Oct 2008; nixnut <nixnut@gentoo.org> strace-4.5.18.ebuild:
  Stable on ppc wrt bug 241168

  11 Oct 2008; Richard Freeman <rich0@gentoo.org> strace-4.5.18.ebuild:
  amd64 stable - 241168

  11 Oct 2008; Jeroen Roovers <jer@gentoo.org> strace-4.5.18.ebuild:
  Stable for HPPA (bug #241168).

  11 Oct 2008; Friedrich Oslage <bluebird@gentoo.org> strace-4.5.18.ebuild:
  Stable on sparc, bug #241168

*strace-4.5.18 (29 Aug 2008)

  29 Aug 2008; Mike Frysinger <vapier@gentoo.org> +strace-4.5.18.ebuild:
  Version bump.

*strace-4.5.17 (16 Aug 2008)

  16 Aug 2008; Mike Frysinger <vapier@gentoo.org> +strace-4.5.17.ebuild:
  Version bump.

  29 Jun 2008; Mike Frysinger <vapier@gentoo.org>
  +files/strace-4.5.16-sparc-fix.patch,
  +files/strace-4.5.16-sparc-socketipc.patch, strace-4.5.16-r1.ebuild:
  Fix building on sparc with patches from Fedora #229229.
