@@ -3,6 +3,8 @@ AUX strace-4.5.18-arm-cache.patch 287 RMD160 fa40d4b52b1e7a78bee7ca89e5a20f986cc
 AUX strace-4.5.18-arm-syscalls.patch 6881 RMD160 e6476e2a98578b78c07ec999f71cf8de63370484 SHA1 8adec60ac5ef57387908d0f8255f97d7143b3f13 SHA256 94986f0ca348e71fc067b2ff71114a1fb70606e22b10427c048ffc04209ef149
 AUX strace-fix-arm-bad-syscall.patch 560 RMD160 56cbe4c575118f78efa40abc7fc84852e30d502c SHA1 d9c4a8687cff9d68ebf892880073bc5585dd87e7 SHA256 b7f57f8fc46af991046e87a6afd2468f337f4ba42f8b4a78fdb8278c47b92aa9
 DIST strace-4.5.18.tar.bz2 480973 RMD160 7f338ee00d151f96add4c1efdab7f76ac3293914 SHA1 50081a7201dc240299396f088abe53c07de98e4c SHA256 95e7b7470e04f22c3ec8dc6d0b1fdd8944306cb5313c84c4545cd83abada26d0
+DIST strace-4.5.19.tar.bz2 499565 RMD160 6083c170d51f7218a6a997f26017881da06ffa65 SHA1 5554c2fd8ffae5c1e2b289b2024aa85a0889c989 SHA256 8997ce919e971b0ec45cd7006c6e1f9c7c0bce68ab59e3a629e1ddeda5013d08
 EBUILD strace-4.5.18.ebuild 1050 RMD160 64f28cc3e2d0310497b49e431867575cdadb96d1 SHA1 22f2fbb5a779d4446cd775ec54fa4ba0e587e084 SHA256 25cfcf71cf0630faa37fa6eb727f63ff820ea414bed8b55b3afe839ffa931ddf
-MISC ChangeLog 16067 RMD160 875e0cf904acf395ccec052232c83287f4f4a680 SHA1 a2b9a5d29f2074621adfa9a176164dfde4324c20 SHA256 bd96400b1c116da346e0bf11ddca470ae5bea1c90dabfcd44b6614d5eb04d638
+EBUILD strace-4.5.19.ebuild 779 RMD160 760fa1a2c8e6f3b14aae6182dcdabd01ae960ddf SHA1 6403d2ec614eae06f43c003ce817464bddcb3fa9 SHA256 c19fa70d3640a181b0337954b21cb8ca9140a9d03c39bc6671e574b91e6d15cb
+MISC ChangeLog 16287 RMD160 0000a8a82abae67ccad0991394f85e54d0e0ef36 SHA1 fa334eac4cc7f13c1b91b77dba2d05aed84bd8d7 SHA256 5354eda126f1850d4a6d6afdfea028d00761f612977b532b804a9d92fcb44898
 MISC metadata.xml 233 RMD160 a47b790cac786bc2f0113e285624754d993ff24a SHA1 a469acfc84253e985986c68afdc4f041506b8f80 SHA256 19ca9ce37dba257ea5593fe398ccf0c7dfdad973abd549dde5cd2d2d4dff9423
